Code cleanup: use modern collection factory methods
* Replace Collections.emptyList() with List.of()
* Replace Collections.emptyMap() with Map.of()

Part of #107